k8s/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example-app-space # <- name of the namespace
  name: example-app-client
  labels:
    app: client

spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: example-app-docker-credentials # <- required to pull images in private registry/repository (value from name in secret.yaml)
      containers:
        - name: client
          image: thisoliver/example-kubernates-app:client # <- tag is important
          #image: example-kubernates-app:client # <- local image
          #imagePullPolicy: Never # <- forces k8 controller to use local image
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
