k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-server
  labels:
    app: server

spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      #imagePullSecrets:
      #  - name: example-app-docker-credentials # <- required to pull images in private registry/repository (value from name in secret.yaml)
      containers:
        - name: server
          image: thisoliver/example-kubernates-app:server # <- tag is important
          #image: example-kubernates-app:server # <- local image
          #imagePullPolicy: Never # <- forces k8 controller to use local image
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
