k8s/deployment.yaml
# This is a Deployment config and it is used to define
# containers (their images, ports and resources) that will
# be deployed to the a pod in the k8 cluster. The metadata
# name is used to reference the deployment in other k8s
# config files. The labels are used to select the deployment
# in other k8s config files.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-deployment
  labels:
    app: example-app

spec:
  replicas: 1 # how many pods need to be running at all times
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
        - name: server
          image: thisoliver/example-kubernates-app:server # <- tag is important
          #image: example-kubernates-app:server # <- local image
          #imagePullPolicy: Never # <- forces k8 controller to use local image
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

        - name: client
          image: thisoliver/example-kubernates-app:client # <- tag is important
          #image: example-kubernates-app:client # <- local image
          #imagePullPolicy: Never # <- forces k8 controller to use local image
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
