k8s/service-client.yaml
# This is a Service config and it is used to define the communication
# interface for deployments in a cluster towards other deployments in
# the same cluster or towards the outside world. This particular service
# (NodePort) is used to expose the client deployment to the outside world
# for users to access. Although a port number is specified (3000), the
# actual port number used will be a high number in the range 30000-32767
# that is automatically assigned by the cluster.

apiVersion: v1
kind: Service
metadata:
  name: example-app-client
  labels:
    app: example-app
    component: client

spec:
  type: NodePort
  selector:
    component: client # <- selects the deployment with the label component: client
  ports:
    - protocol: TCP
      targetPort: client-port # <- client container in deployment.yaml
      port: 3000 # <- port for external access
