k8s/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service-server # <- name of the service
  labels:
    app: server

spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4000 # <- pod port
      targetPort: 4000 # <- container port
