k8s/service.yaml
# This is a Service config and it is used to define the ports that will be
# exposed to externally from the respective pod. In this case, the service
# exposed port 3000 from the client container in the deployment.yaml file
# to port 8000 on the pod that is hosting the client container. This allows
# us to access the client container from the outside world.

apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  labels:
    app: example-app

spec:
  selector:
    app: example-app # <- selects the deployment with the label app: example-app
  ports:
    - protocol: TCP
      port: 8000 # <- port for external access
      targetPort: 3000 # <- client container in deployment.yaml
