k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: example-app-space
  name: example-app-services # <- name of the service
  labels:
    app: server

spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4000 # Expose the service on internal port
      targetPort: 3000 # Forward traffic to container port
